# thesis

./: .gitignore  ~$mabejelento.docx
.github/workflows/: release.yml
dev/: CMakeLists.txt  main.cpp  pstl.cpp
doc/: References.docx  table_of_contents.docx  temabejelento.docx
src/: CMakeLists.txt  compile.sh  copy_backward.h  copy_backward_results.csv  iota_results_2.csv  iterator.h  main.cpp  p_copy_if.h  p_find_if.h  p_iota.h  plotting.py  pstl.h  tests.cpp  utils.h
src/tests/: copy_backward_tests.cpp  copy_if_tests.cpp  find_if_tests.cpp  iota_tests.cpp  performance_tests.cpp  remove_if_tests.cpp  test_runner.cpp
src/tests/performance_test_assets/: copy_backward_results.csv  copy_if_results.csv  find_if_results.csv  iota.csv  iota_results_2.csv
